--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
                     <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
                 </div>
                 <div class="home ">
-                    <img class="icon" src="./Assets/svg/home.svg" alt="home" />
+                    <a href="./index.html">
+                        <img class="icon" src="./Assets/svg/home.svg" alt="home" />
+                    </a>
                     <!-- <p>Home</p> -->
                 </div>
                 <div class="explore ">
-                    <img class="icon" src="./Assets/svg/explore.svg" alt="explore" />
+                    <a href="./explore.html">
+                        <img class="icon" src="./Assets/svg/explore.svg" alt="explore" />
+                    </a>
                     <!-- <p>Explore</p> -->
                 </div>
             </div>
@@ -38,10 +42,21 @@
                     <!-- <img src="./Assets/svg/logo.svg" alt="logo" /> -->
                     LOGO
                 </div>
-                <div class="search-bar">
-                    <img src="./Assets/svg/search.svg" alt="search" />
-                    <input type="text" placeholder="Search" />
-                </div>
+                <!-- <div class="search-bar"> -->
+                <label class="search-label">
+                    <input type="text" name="text" class="input" required="" placeholder="Type here...">
+                    <kbd class="slash-icon">/</kbd>
+                    <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" version="1.1"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="512" x="0" y="0"
+                        viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 512 512" xml:space="preserve">
+                        <g>
+                            <path
+                                d="M55.146 51.887 41.588 37.786A22.926 22.926 0 0 0 46.984 23c0-12.682-10.318-23-23-23s-23 10.318-23 23 10.318 23 23 23c4.761 0 9.298-1.436 13.177-4.162l13.661 14.208c.571.593 1.339.92 2.162.92.779 0 1.518-.297 2.079-.837a3.004 3.004 0 0 0 .083-4.242zM23.984 6c9.374 0 17 7.626 17 17s-7.626 17-17 17-17-7.626-17-17 7.626-17 17-17z"
+                                fill="currentColor" data-original="#000000" class=""></path>
+                        </g>
+                    </svg>
+                </label>
+                <!-- </div> -->
                 <div class="nav-list">
                     <a class="license">License</a>
                     <a class="join">Join</a>
@@ -51,7 +66,141 @@
                     </div>
                 </div>
             </nav>
+            <!-- play video in loop -->
+
+            <div class="video-container">
+                <video src="./Assets/videos/video.mp4" autoplay loop></video>
+                <div class="text-on-videos">
+                    <h1>Video Title</h1>
+                    <p>Video Description</p>
+                </div>
+
+            </div>
+
+            <div class="container">
+                <div class="type-container">
+                    <div class="type-options">
+                        <ul>
+                            <li>
+                                <a href="#">Image</a>
+                            </li>
+                            <li>
+                                <a href="#">Video</a>
+                            </li>
+                            <li>
+                                <a href="#">Illustrate </a>
+                            </li>
+                            <li>
+                                <a href="#">Vector</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="filter">
+                        <button class="filter-button">
+                            Filter
+                        </button>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="dream">
+                        <div class="image-div">
+                            <img src="./Assets/images/182d737d37d3b50026392be25859dc67.jpg" alt="dream" />
+                            <p>Karan Shah</p>
+                        </div>
+                        <div class="image-div">
+                            <img src="./Assets/images/20171112_215053.jpg" alt="dream" />
+                            <p>Karan Shah</p>
+
+                        </div>
+                        <div class="image-div">
+                            <img src="./Assets/images/20171216_231059.jpg" alt="dream" />
+                        </div>
+                    </div>
+                    <div class="dream">
+                        <div class="image-div">
+                            <img src="./Assets/images/20180919_175351.jpg" alt="dream" />
+                            <p>Karan Shah</p>
+
+                        </div>
+                        <div class="image-div">
+                            <img src="./Assets/images/20190619_180532.jpg" alt="dream" />
+                        </div>
+                        <div class="image-div">
+                            <img src="./Assets/images/20191013_182012.jpg" alt="dream" />
+                        </div>
+                        <div class="image-div">
+                            <img src="./Assets/images/20200201_131832.jpg" alt="dream" />
+                        </div>
+                     
+                    </div>
+                    <div class="dream">
+                        <div class="image-div">
+                            <img src="./Assets/images/DSC_0578.JPG" alt="dream" />
+                            <p>Karan Shah</p>
+
+                        </div>
+                        <div class="image-div">
+                            <img src="./Assets/images/20191031_121052.jpg" alt="dream" />
+                        </div>
+                        <div class="image-div">
+                            <img src="./Assets/images/20191031_121211.jpg" alt="dream" />
+                        </div>
+                        <div class="image-div">
+                            <img src="./Assets/images/DSC_0245.JPG" alt="dream" />
+                        </div>
+                    </div>
+                </div>
+
+                <div class="load-more-container">
+                    <button class="load-more-button">Load More</button>
+                </div>
+
+                <footer>
+                    <div class="left">
+                        <div class="logo">
+                            <!-- <img src="logo.png" alt="Logo"> -->
+                            <h1>LOGO</h1>
+                        </div>
+                        <div class="social-icons">
+                            <a href="#"><img src="/Assets/pngs/facebook.png" alt="Facebook"></a>
+                            <a href="#"><img src="/Assets/pngs/twitter.png" alt="Twitter"></a>
+                            <a href="#"><img src="/Assets/pngs/instagram.png" alt="Instagram"></a>
+                            <a href="#"><img src="/Assets/pngs/linkedin.png" alt="LinkedIn"></a>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="section">
+                            <h3>Discover</h3>
+                            <ul>
+                                <li><a href="#">Category 1</a></li>
+                                <li><a href="#">Category 2</a></li>
+                                <li><a href="#">Category 3</a></li>
+                            </ul>
+                        </div>
+                        <div class="section">
+                            <h3>Company</h3>
+                            <ul>
+                                <li><a href="/aboutUs.html">About</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">FAQ</a></li>
+                            </ul>
+                        </div>
+                        <div class="section">
+                            <h3>Blog</h3>
+                            <ul>
+                                <li><a href="#">Post 1</a></li>
+                                <li><a href="#">Post 2</a></li>
+                                <li><a href="#">Post 3</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </footer>
+
+            </div>
+
         </div>
     </div>
+</body>
 
 </html>
