--- a/explore.html
+++ b/explore.html
@@ -215,7 +215,7 @@
             <div class="section">
               <h3>Company</h3>
               <ul>
-                <li><a href="/aboutUs.html">About</a></li>
+                <li><a href="./aboutUs.html">About</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">FAQ</a></li>
               </ul>
