--- a/aboutUs.html
+++ b/aboutUs.html
@@ -92,7 +92,7 @@
                     <section>
                         <h2>Meet the Owner</h2>
                         <div class="owner">
-                            <img src="/Assets/images/DSC_0107-01.jpeg" alt="Owner">
+                            <img src="./Assets/images/DSC_0107-01.jpeg" alt="Owner">
                             <div class="owner-info">
                                 <h3>Karan Shah</h3>
                                 <p>Founder & Photographer</p>
@@ -126,10 +126,10 @@
                             <h1>LOGO</h1>
                         </div>
                         <div class="social-icons">
-                            <a href="#"><img src="/Assets/pngs/facebook.png" alt="Facebook"></a>
-                            <a href="#"><img src="/Assets/pngs/twitter.png" alt="Twitter"></a>
-                            <a href="#"><img src="/Assets/pngs/instagram.png" alt="Instagram"></a>
-                            <a href="#"><img src="/Assets/pngs/linkedin.png" alt="LinkedIn"></a>
+                            <a href="#"><img src="./Assets/pngs/facebook.png" alt="Facebook"></a>
+                            <a href="#"><img src="./Assets/pngs/twitter.png" alt="Twitter"></a>
+                            <a href="#"><img src="./Assets/pngs/instagram.png" alt="Instagram"></a>
+                            <a href="#"><img src="./Assets/pngs/linkedin.png" alt="LinkedIn"></a>
                         </div>
                     </div>
                     <div class="right">
