--- a/explore.html
+++ b/explore.html
@@ -103,7 +103,7 @@
         </div>
         <div class="top-container">
           <div class="top-box">
-            <img src="/Assets/images/20191027_163830-01.jpeg" alt="">
+            <img src="./Assets/images/20191027_163830-01.jpeg" alt="">
             <h4 class="top-title">Centered Title</h4>
           </div>
           <div class="top-box">
@@ -131,62 +131,62 @@
         <div class="explore-container">
           <div class="explore-box">
             <h2 class="title">Explore Box</h2>
-            <img src="/Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
+            <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
-              <img src="/Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-              <img src="/Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
-              <img src="/Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
-              <img src="/Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
+              <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
+              <img src="./Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
+              <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
+              <img src="./Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
             </div>
           </div>
           <div class="explore-box">
             <h2 class="title">Explore Box</h2>
-            <img src="/Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
+            <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
-              <img src="/Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-              <img src="/Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
-              <img src="/Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
-              <img src="/Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
+              <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
+              <img src="./Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
+              <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
+              <img src="./Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
             </div>
           </div>
           <div class="explore-box">
             <h2 class="title">Explore Box</h2>
-            <img src="/Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
+            <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
-              <img src="/Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-              <img src="/Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
-              <img src="/Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
-              <img src="/Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
+              <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
+              <img src="./Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
+              <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
+              <img src="./Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
             </div>
           </div>
           <div class="explore-box">
             <h2 class="title">Explore Box</h2>
-            <img src="/Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
+            <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
-              <img src="/Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-              <img src="/Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
-              <img src="/Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
-              <img src="/Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
+              <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
+              <img src="./Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
+              <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
+              <img src="./Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
             </div>
           </div>
           <div class="explore-box">
             <h2 class="title">Explore Box</h2>
-            <img src="/Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
+            <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
-              <img src="/Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-              <img src="/Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
-              <img src="/Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
-              <img src="/Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
+              <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
+              <img src="./Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
+              <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
+              <img src="./Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
             </div>
           </div>
           <div class="explore-box">
             <h2 class="title">Explore Box</h2>
-            <img src="/Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
+            <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
-              <img src="/Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-              <img src="/Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
-              <img src="/Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
-              <img src="/Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
+              <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
+              <img src="./Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
+              <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
+              <img src="./Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
             </div>
           </div>
         </div>
@@ -197,10 +197,10 @@
               <h1>LOGO</h1>
             </div>
             <div class="social-icons">
-              <a href="#"><img src="/Assets/pngs/facebook.png" alt="Facebook"></a>
-              <a href="#"><img src="/Assets/pngs/twitter.png" alt="Twitter"></a>
-              <a href="#"><img src="/Assets/pngs/instagram.png" alt="Instagram"></a>
-              <a href="#"><img src="/Assets/pngs/linkedin.png" alt="LinkedIn"></a>
+              <a href="#"><img src="./Assets/pngs/facebook.png" alt="Facebook"></a>
+              <a href="#"><img src="./Assets/pngs/twitter.png" alt="Twitter"></a>
+              <a href="#"><img src="./Assets/pngs/instagram.png" alt="Instagram"></a>
+              <a href="#"><img src="./Assets/pngs/linkedin.png" alt="LinkedIn"></a>
             </div>
           </div>
           <div class="right">
