--- a/explore.html
+++ b/explore.html
@@ -17,7 +17,7 @@
           <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
         </div>
         <div class="home ">
-          <a href="/">
+          <a href="./">
             <img class="icon" src="./Assets/svg/home.svg" alt="home" />
           </a>
           <!-- <p>Home</p> -->
