--- a/explore.html
+++ b/explore.html
@@ -13,9 +13,9 @@
   <div class="main-container">
     <div class="left-container">
       <div class="top-left-container">
-        <div class="menu">
+        <!-- <div class="menu">
           <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
-        </div>
+        </div> -->
         <div class="home ">
           <a href="./">
             <img class="icon" src="./Assets/svg/home.svg" alt="home" />
@@ -39,8 +39,7 @@
     <div class="right-container">
       <nav class="top-nav">
         <div class="logo">
-          <!-- <img src="./Assets/svg/logo.svg" alt="logo" /> -->
-          LOGO
+          <img src="./Assets/svg/Asset 1.svg" alt="logo" />
         </div>
         <!-- <div class="search-bar"> -->
         <label class="search-label">
@@ -65,6 +64,9 @@
             <img src="./Assets/svg/more_vert.svg" alt="more options" />
           </div>
         </div>
+        <div class="menu">
+          <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
+        </div>
       </nav>
       <!-- play video in loop -->
 
@@ -78,26 +80,7 @@
       </div>
 
       <div class="container">
-        <!-- <div class="explore-container">     
-          <div class="explore-box">
-            <img src="/Assets/images/wallpaper.jpg" alt="Image 1">
-            <img src="/Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
-            <img src="/Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
-            <img src="/Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
-          </div>
-          <div class="explore-box">
-            <img src="/Assets/images/wallpaper.jpg" alt="Image 1">
-            <img src="/Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
-            <img src="/Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
-            <img src="/Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
-          </div>
-          <div class="explore-box">
-            <img src="/Assets/images/wallpaper.jpg" alt="Image 1">
-            <img src="/Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
-            <img src="/Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
-            <img src="/Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
-          </div>
-        </div> -->
+
         <div class="Topic-header">
           <h2>Top Topic</h2>
         </div>
@@ -124,13 +107,19 @@
           <div class="top-box">
             <h4 class="top-title">Centered Title</h4>
           </div>
+          <div class="top-box">
+            <h4 class="top-title">Centered Title</h4>
+          </div>
+          <!-- <div class="top-box">
+            <h4 class="top-title">Centered Title</h4>
+          </div> -->
         </div>
 
         <h2>All Topics</h2>
 
         <div class="explore-container">
           <div class="explore-box">
-            <h2 class="title">Explore Box</h2>
+            <p class="title">Explore Box</p>
             <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
               <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
@@ -140,7 +129,7 @@
             </div>
           </div>
           <div class="explore-box">
-            <h2 class="title">Explore Box</h2>
+            <p class="title">Explore Box</p>
             <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
               <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
@@ -150,7 +139,7 @@
             </div>
           </div>
           <div class="explore-box">
-            <h2 class="title">Explore Box</h2>
+            <p class="title">Explore Box</p>
             <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
               <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
@@ -160,7 +149,7 @@
             </div>
           </div>
           <div class="explore-box">
-            <h2 class="title">Explore Box</h2>
+            <p class="title">Explore Box</p>
             <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
               <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
@@ -170,7 +159,7 @@
             </div>
           </div>
           <div class="explore-box">
-            <h2 class="title">Explore Box</h2>
+            <p class="title">Explore Box</p>
             <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
               <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
@@ -180,7 +169,7 @@
             </div>
           </div>
           <div class="explore-box">
-            <h2 class="title">Explore Box</h2>
+            <p class="title">Explore Box</p>
             <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
               <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
@@ -193,8 +182,7 @@
         <footer>
           <div class="left">
             <div class="logo">
-              <!-- <img src="logo.png" alt="Logo"> -->
-              <h1>LOGO</h1>
+              <img src="./Assets/svg/Asset 1.svg" alt="logo" />
             </div>
             <div class="social-icons">
               <a href="#"><img src="./Assets/pngs/facebook.png" alt="Facebook"></a>
