--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="main-container">
         <div class="left-container">
             <div class="top-left-container">
-                <div class="menu">
+                <!-- <div class="menu">
                     <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
-                </div>
+                </div> -->
                 <div class="home ">
                     <a href="./index.html">
                         <img class="icon" src="./Assets/svg/home.svg" alt="home" />
@@ -39,8 +39,8 @@
         <div class="right-container">
             <nav class="top-nav">
                 <div class="logo">
-                    <!-- <img src="./Assets/svg/logo.svg" alt="logo" /> -->
-                    LOGO
+                    <img src="./Assets/svg/Asset 1.svg" alt="logo" />
+                    <!-- LOGO -->
                 </div>
                 <!-- <div class="search-bar"> -->
                 <label class="search-label">
@@ -64,6 +64,9 @@
                     <div class="more-options">
                         <img src="./Assets/svg/more_vert.svg" alt="more options" />
                     </div>
+                </div>
+                 <div class="menu">
+                    <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
                 </div>
             </nav>
             <!-- play video in loop -->
@@ -159,8 +162,7 @@
                 <footer>
                     <div class="left">
                         <div class="logo">
-                            <!-- <img src="logo.png" alt="Logo"> -->
-                            <h1>LOGO</h1>
+                            <img src="./Assets/svg/Asset 1.svg" alt="logo" />
                         </div>
                         <div class="social-icons">
                             <a href="#"><img src="/Assets/pngs/facebook.png" alt="Facebook"></a>
