--- a/aboutUs.html
+++ b/aboutUs.html
@@ -13,9 +13,9 @@
     <div class="main-container">
         <div class="left-container">
             <div class="top-left-container">
-                <div class="menu">
+                <!-- <div class="menu">
                     <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
-                </div>
+                </div> -->
                 <div class="home ">
                     <a href="./">
                         <img class="icon" src="./Assets/svg/home.svg" alt="home" />
@@ -39,8 +39,7 @@
         <div class="right-container">
             <nav class="top-nav">
                 <div class="logo">
-                    <!-- <img src="./Assets/svg/logo.svg" alt="logo" /> -->
-                    LOGO
+                    <img src="./Assets/svg/Asset 1.svg" alt="logo" />
                 </div>
                 <!-- <div class="search-bar"> -->
                 <label class="search-label">
@@ -65,6 +64,9 @@
                         <img src="./Assets/svg/more_vert.svg" alt="more options" />
                     </div>
                 </div>
+                <div class="menu">
+                    <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
+                </div>
             </nav>
             <!-- play video in loop -->
 
@@ -78,11 +80,10 @@
             </div>
 
             <div class="container">
-                <h1>About US</h1>
                 <!-- About Us Code -->
                 <main>
                     <section>
-                        <h2>Our Story</h2>
+                        <h2 class="about-title">Our Story</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla aliquam nisi sed consequat
                             cursus. In
                             malesuada, nunc sed eleifend rutrum, sapien leo feugiat tellus, nec finibus turpis sem ac
@@ -90,40 +91,56 @@
                     </section>
 
                     <section>
-                        <h2>Meet the Owner</h2>
+                        <h2 class="about-title">Meet the Owner</h2>
                         <div class="owner">
                             <img src="./Assets/images/DSC_0107-01.jpeg" alt="Owner">
                             <div class="owner-info">
                                 <h3>Karan Shah</h3>
-                                <p>Founder & Photographer</p>
+                                <p> Founder & Photographer</p>
+                                <div>
+                                    <h3>Email</h3>
+                                    <p> <a href="mailto:kshah4452@conestogac.on.ca">kshah4452@conestogac.on.ca</a></p>
+                                </div>
+                                <div>
+                                    <h3>Phone</h3>
+                                    <p> +1 6479755124</p>
+                                </div>
                             </div>
                         </div>
                     </section>
 
+
                     <section>
-                        <h2>Contact Us</h2>
+                        <h2 class="about-title">Contact Us</h2>
                         <p>If you have any questions or inquiries, feel free to reach out to us:</p>
                         <div class="contact-info">
-                            <div>
-                                <h4>Email</h4>
-                                <p><a href="mailto:kshah4452@conestogac.on.ca">kshah4452@conestogac.on.ca</a></p>
-                            </div>
-                            <div>
-                                <h4>Phone</h4>
-                                <p>+1 6479755124</p>
-                            </div>
-                            <div>
-                                <h4>Address</h4>
-                                <p>Testing</p>
-                            </div>
+                            <!-- Responsive Form -->
+                          
+                            <form>
+                                <div class="form-element">
+                                    <label for="name">Name:</label>
+                                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                                </div>
+                                <div class="form-element">
+                                    <label for="email">Email:</label>
+                                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                                </div>
+                                <div class="form-element">
+                                    <label for="message">Message:</label>
+                                    <textarea id="message" name="message" placeholder="Enter your message"
+                                        required></textarea>
+                                </div>
+                                <div class="form-element">
+                                    <button type="submit">Submit</button>
+                                </div>
+                            </form>
                         </div>
                     </section>
                 </main>
                 <footer>
                     <div class="left">
                         <div class="logo">
-                            <!-- <img src="logo.png" alt="Logo"> -->
-                            <h1>LOGO</h1>
+                            <img src="./Assets/svg/Asset 1.svg" alt="logo" />
                         </div>
                         <div class="social-icons">
                             <a href="#"><img src="./Assets/pngs/facebook.png" alt="Facebook"></a>
