--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
                             <img src="./Assets/svg/Asset 1.svg" alt="logo" />
                         </div>
                         <div class="social-icons">
-                            <a href="#"><img src="/Assets/pngs/facebook.png" alt="Facebook"></a>
-                            <a href="#"><img src="/Assets/pngs/twitter.png" alt="Twitter"></a>
-                            <a href="#"><img src="/Assets/pngs/instagram.png" alt="Instagram"></a>
-                            <a href="#"><img src="/Assets/pngs/linkedin.png" alt="LinkedIn"></a>
+                            <a href="#"><img src="./Assets/pngs/facebook.png" alt="Facebook"></a>
+                            <a href="#"><img src="./Assets/pngs/twitter.png" alt="Twitter"></a>
+                            <a href="#"><img src="./Assets/pngs/instagram.png" alt="Instagram"></a>
+                            <a href="#"><img src="./Assets/pngs/linkedin.png" alt="LinkedIn"></a>
                         </div>
                     </div>
                     <div class="right">
