add images path

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -74,7 +74,6 @@
                 <video src="./Assets/videos/video.mp4" autoplay loop></video>
                 <div class="text-on-videos">
                     <h1>About Us</h1>
-                    <p>Video Description</p>
                 </div>
 
             </div>
@@ -108,6 +107,43 @@
                             </div>
                         </div>
                     </section>
+                    <h2 class="about-title">Meet the Team</h2>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Position </th>
+                                <th>Name</th>
+                                <th>Contact Number</th>
+                                <th>Email Id</th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Editor</td>
+                                <td>Shivam Patel</td>
+                                <td>647-975-5124</td>
+                                <td><a href="mailto: dummy1@gmail.com">dummy1@gmail.com </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Designer</td>
+                                <td>Meet Shah</td>
+                                <td>647-975-5125</td>
+                                <td><a href="mailto: dummy2@gmail.com"> dummy2@gmail.com</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Developer</td>
+                                <td>Lucky</td>
+                                <td>647-975-5126</td>
+                                <td><a href="mailto: dummy3@gmail.com"> dummy3@gmail.com</a>
+                                </td>
+                            </tr>
+
+
+                        </tbody>
+                    </table>
 
 
                     <section>
@@ -115,7 +151,7 @@
                         <p>If you have any questions or inquiries, feel free to reach out to us:</p>
                         <div class="contact-info">
                             <!-- Responsive Form -->
-                          
+
                             <form>
                                 <div class="form-element">
                                     <label for="name">Name:</label>
@@ -153,9 +189,9 @@
                         <div class="section">
                             <h3>Discover</h3>
                             <ul>
-                                <li><a href="#">Category 1</a></li>
-                                <li><a href="#">Category 2</a></li>
-                                <li><a href="#">Category 3</a></li>
+                                <li><a href="#">Advertise</a></li>
+                                <li><a href="#">Terms of Service</a></li>
+                                <li><a href="#">Careers</a></li>
                             </ul>
                         </div>
                         <div class="section">
