--- a/explore.html
+++ b/explore.html
@@ -72,9 +72,10 @@
 
       <div class="video-container">
         <video src="./Assets/videos/video.mp4" autoplay loop></video>
+        <!-- <img src="./Assets/images/DSC_0229.jpg" alt=""> -->
         <div class="text-on-videos">
           <h1>Explore</h1>
-          <p>Video Description</p>
+          <!-- <p>Video Description</p> -->
         </div>
 
       </div>
@@ -87,29 +88,33 @@
         <div class="top-container">
           <div class="top-box">
             <img src="./Assets/images/20191027_163830-01.jpeg" alt="">
-            <h4 class="top-title">Centered Title</h4>
+            <h4 class="top-title">Nature</h4>
           </div>
           <div class="top-box">
-            <h4 class="top-title">Centered Title</h4>
+            <img src="./Assets/images/pexels-prime-cinematics-2036544.jpg" alt="">
+            <h4 class="top-title">Car</h4>
           </div>
           <div class="top-box">
-            <h4 class="top-title">Centered Title</h4>
+            <img src="./Assets/images/IMG_20190620_092529_518.jpg" alt="">
+            <h4 class="top-title">Flowers</h4>
           </div>
           <div class="top-box">
-            <h4 class="top-title">Centered Title</h4>
+            <img src="./Assets/images/IMG_20211019_185939_722.jpg" alt="">
+            <h4 class="top-title">Architecture</h4>
           </div>
           <div class="top-box">
-            <h4 class="top-title">Centered Title</h4>
+            <img src="./Assets/images/20200107_222746.jpg" alt="">
+            <h4 class="top-title">Art</h4>
           </div>
           <div class="top-box">
-            <h4 class="top-title">Centered Title</h4>
+            <img src="./Assets/images/DSC_0025.JPG" alt="">
+            <h4 class="top-title">Wallpaper</h4>
           </div>
           <div class="top-box">
-            <h4 class="top-title">Centered Title</h4>
+            <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="">
+            <h4 class="top-title"> Jungle </h4>
           </div>
-          <div class="top-box">
-            <h4 class="top-title">Centered Title</h4>
-          </div>
+         
           <!-- <div class="top-box">
             <h4 class="top-title">Centered Title</h4>
           </div> -->
@@ -119,11 +124,51 @@
 
         <div class="explore-container">
           <div class="explore-box">
+            <p class="title">Wallpaper</p>
+            <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
+            <div class="hover-images">
+              <img src="./Assets/images/20191031_121052.jpg" alt="Image 1" class="main-image">
+              <img src="./Assets/images/DSC_0052.JPG" alt="Image 2">
+              <img src="./Assets/images/20171216_231059.jpg" alt="Image 3">
+              <img src="./Assets/images/DSC_0061.JPG" alt="Image 4">
+            </div>
+          </div>
+          <div class="explore-box">
+            <p class="title">Humans</p>
+            <img src="./Assets/images/20191031_155234.jpg" alt="Image 1" class="main-image">
+            <div class="hover-images">
+              <img src="./Assets/images/IMG_20200222_005955_901.jpg" alt="Image 1" class="main-image">
+              <img src="./Assets/images/IMG_20190223_235317_908.jpg" alt="Image 2">
+              <img src="./Assets/images/IMG_20190109_000307_905.jpg" alt="Image 3">
+              <img src="./Assets/images/IMG_20200808_235709_992.jpg" alt="Image 4">
+            </div>
+          </div>
+          <div class="explore-box">
+            <p class="title">Boats</p>
+            <img src="./Assets/images/DSC_0025.JPG" alt="Image 1" class="main-image">
+            <div class="hover-images">
+              <img src="./Assets/images/DSC_0027.JPG" alt="Image 1" class="main-image">
+              <img src="./Assets/images/DSC_0048 (2).JPG" alt="Image 2">
+              <img src="./Assets/images/DSC_0245.JPG" alt="Image 3">
+              <img src="./Assets/images/DSC_0242.JPG" alt="Image 4">
+            </div>
+          </div>
+          <div class="explore-box">
+            <p class="title">Nature</p>
+            <img src="./Assets/images/IMG_20211019_185939_722.jpg" alt="Image 1" class="main-image">
+            <div class="hover-images">
+              <img src="./Assets/images/20181211_102845.jpg" alt="Image 1" class="main-image">
+              <img src="./Assets/images/DSC_0051.JPG" alt="Image 2">
+              <img src="./Assets/images/DSC_0261.JPG" alt="Image 3">
+              <img src="./Assets/images/IMG_20200808_200009_341.jpg" alt="Image 4">
+            </div>
+          </div>
+          <div class="explore-box">
             <p class="title">Explore Box</p>
             <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
               <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-              <img src="./Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
+              <img src="./Assets/images/IMG_20171214_115141_121.jpg" alt="Image 2">
               <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
               <img src="./Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
             </div>
@@ -133,47 +178,7 @@
             <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
             <div class="hover-images">
               <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-              <img src="./Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
-              <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
-              <img src="./Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
-            </div>
-          </div>
-          <div class="explore-box">
-            <p class="title">Explore Box</p>
-            <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-            <div class="hover-images">
-              <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-              <img src="./Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
-              <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
-              <img src="./Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
-            </div>
-          </div>
-          <div class="explore-box">
-            <p class="title">Explore Box</p>
-            <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-            <div class="hover-images">
-              <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-              <img src="./Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
-              <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
-              <img src="./Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
-            </div>
-          </div>
-          <div class="explore-box">
-            <p class="title">Explore Box</p>
-            <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-            <div class="hover-images">
-              <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-              <img src="./Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
-              <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
-              <img src="./Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
-            </div>
-          </div>
-          <div class="explore-box">
-            <p class="title">Explore Box</p>
-            <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-            <div class="hover-images">
-              <img src="./Assets/images/wallpaper.jpg" alt="Image 1" class="main-image">
-              <img src="./Assets/images/InstraFitter_20191229_193535.jpg" alt="Image 2">
+              <img src="./Assets/images/IMG_20171214_115141_121.jpg" alt="Image 2">
               <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="Image 3">
               <img src="./Assets/images/IMG_20200911_000014_562.jpg" alt="Image 4">
             </div>
@@ -195,10 +200,10 @@
             <div class="section">
               <h3>Discover</h3>
               <ul>
-                <li><a href="#">Category 1</a></li>
-                <li><a href="#">Category 2</a></li>
-                <li><a href="#">Category 3</a></li>
-              </ul>
+                <li><a href="#">Advertise</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Careers</a></li>
+            </ul>
             </div>
             <div class="section">
               <h3>Company</h3>
