--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div class="video-container">
                 <video src="./Assets/videos/video.mp4" autoplay loop></video>
                 <div class="text-on-videos">
-                    <h1>Video Title</h1>
-                    <p>Video Description</p>
+                    <h1>Home Page</h1>
+                    <p>"Discover limitless possibilities on our dynamic home page."</p>
                 </div>
 
             </div>
@@ -139,7 +139,7 @@
                     </div>
                     <div class="dream">
                         <div class="image-div">
-                            <img src="./Assets/images/DSC_0578.JPG" alt="dream" />
+                            <img src="./Assets/images/DSC_0027.JPG" alt="dream" />
                             <p>Karan Shah</p>
 
                         </div>
@@ -175,9 +175,9 @@
                         <div class="section">
                             <h3>Discover</h3>
                             <ul>
-                                <li><a href="#">Category 1</a></li>
-                                <li><a href="#">Category 2</a></li>
-                                <li><a href="#">Category 3</a></li>
+                                <li><a href="#">Advertise</a></li>
+                                <li><a href="#">Terms of Service</a></li>
+                                <li><a href="#">Careers</a></li>
                             </ul>
                         </div>
                         <div class="section">
